<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="6"
    android:useDefaultMargins="true">

    <Button
        android:id="@+id/btnStartReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="start|top"
            android:text="@string/btn_start_reading"
            android:textAllCaps="true" />

    <EditText
        android:id="@+id/edtAPDUCommand"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginLeft="5dp"
        android:background="@drawable/rectagle_background"
        android:focusable="false"
        android:hint="@string/hint_apdu_command"
        android:inputType="textCapCharacters"
        android:scrollHorizontally="true" />

    <GridLayout
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="3"
        android:useDefaultMargins="false">

        <TextView
            android:id="@+id/txtDeviceInfo"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="Firmware Version: ???\nSerial Number: ???" />

    </GridLayout>


    <ScrollView
        android:id="@+id/sclSCRLog"
        android:layout_width="wrap_content"
        android:layout_height="185dp"
        android:layout_row="5"
        android:layout_rowSpan="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="start|fill_vertical"
        android:fillViewport="true">

        <TextView
            android:id="@+id/txtSCRLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco
laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco
laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco
laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco
laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco
laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco
laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipisicing elit,
sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud exercitation ullamco
laboris nisi ut aliquip ex ea commodo consequat."
            android:textSize="20sp" />
    </ScrollView>

    <Spinner
        android:id="@+id/spnSCRList"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="start|top"
        android:prompt="@string/lbl_select_scr" />


    <TextView
        android:id="@+id/lblSelectSCR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="start|center_vertical"
        android:text="@string/lbl_select_scr"
        android:textSize="20sp" />

    <ToggleButton
        android:id="@+id/btnEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="top|fill_vertical|start"
        android:checked="false"
        android:enabled="false"
        android:textSize="18sp" />

</GridLayout>